--- a/app/containers/Bingo/Bingo.css
+++ b/app/containers/Bingo/Bingo.css
@@ -1,14 +1,16 @@
 .cardboard{
-    border: solid 1px !important;
+    border: solid 1px #fff !important;
     border-radius: 5px !important;
 }
 .cardboard thead{
     background-color:#f49c23 ;
+    
    
 }
 .cardboard thead tr th{
     width: 4em !important;
     color: #fff !important;
+
 }
 .cardboard tbody tr {
     height: 4em;
@@ -18,4 +20,6 @@
 }
 .cardboard tbody tr td{
     width: 4em !important;
+    color: #fff !important;
+    border-color: #fff !important;
 }
