--- a/app/containers/CalculatePage/CalculatePage.css
+++ b/app/containers/CalculatePage/CalculatePage.css
@@ -9,6 +9,17 @@
     display: none !important;
   }
 }
+@media only screen and (max-width: 600px) {
+  .ui.table tr {
+    display: flex;
+    flex-direction: row !important;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .hide-on-mobile {
+    display: none !important;
+  }
+}
 
 
 /* Mobile */
@@ -31,6 +42,7 @@
   }
 }
 .nopadded{
+  color: #000;
   padding: 0.1em 0.3em !important;
 }
 .inputsize{
