--- a/app/containers/CalculatePage/CalculatePage.css
+++ b/app/containers/CalculatePage/CalculatePage.css
@@ -48,3 +48,19 @@
 .inputsize{
   font-size: 12px !important;
 }
+
+.img-fade {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 1s, visibility 1s;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.img-fade.show {
+  opacity: 1;
+  visibility: visible;
+}
